Release 0.2.6 - Update settings UI